Fix to make images and icons visible on Heroku

--- a/src/assets/sass/components/title-container.scss
+++ b/src/assets/sass/components/title-container.scss
@@ -6,7 +6,7 @@ $imp: !important;
   position: relative;
   padding: 1.5rem 0 2rem 0;
   border-bottom: 1px solid transparent;
-  background-image: url("components/assets/header-background.jpg");
+  background-image: url("https://res.cloudinary.com/politic/image/upload/v1558960981/header-background.jpg");
   background-size:60%;
 }
 
@@ -157,7 +157,7 @@ $imp: !important;
   height: 100%;
   min-height: 2em;
   min-width: 2em;
-  background-image: url("components/assets/searching-magnifying-glass.svg");
+  background-image: url("https://res.cloudinary.com/politic/image/upload/v1558961224/searching-magnifying-glass.svg");
   background-size: contain;
   background-repeat: no-repeat;
   margin: 0;
